syntax = "proto3";

package email;

option go_package = "/email";

message EmailReq {
    string from = 1; // 发件人
    string to = 2;   // 收件人
    string content_type = 3; // 连接类型
    string subject = 4; // 邮件主题 
    string content = 5;
}

message EmailResp {

}

service EmailService {
    rpc Send(EmailReq) returns (EmailResp);
    
}